# peekread

./: Cargo.toml  README.md  RELEASES.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: make_as_trait_impl.rs  peekread.rs
src/: bufreader.rs  cursor.rs  foreign_impl.rs  lib.rs  peekreader.rs  reader.rs  seekreader.rs  util.rs  v2.rs
src/detail/: cursor.rs  mod.rs
src/old/: cursor.rs  lib.rs
