[package]
name = "peekread"
version = "0.1.1"  # Remember to grep and update version everywhere.
authors = ["Orson Peters <orsonpeters@gmail.com>"]
edition = "2018"
description = "Allows peeking ahead in Read streams"
license = "Zlib"
repository = "https://github.com/orlp/peekread"
readme = "README.md"
keywords = ["peek", "read", "stream"]
categories = ["filesystem", "parsing"]

[dependencies]