
[package]
name = "peekread-fuzz"
version = "0.0.0"
authors = ["Orson Peters <orsonpeters@gmail.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
paste = "1.0.5"

[dependencies.peekread]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "peekread"
path = "fuzz_targets/peekread.rs"
test = false
doc = false
